name:                hstlink
version:             0.1.0.0
author:              UBC Orbit CDH
copyright:           2018 UBC Orbit
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     STLink.Driver
                     , STLink.Detection
                     , STLink.Commands
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , usb
                     , vector
                     , boxes
                     , text
                     , bytestring
                     , binary
                     , mtl
  default-extensions: OverloadedStrings
                    , FlexibleContexts
  ghc-options:         -Wall -O3