name:                trillium-tester
version:             0.1.0.0
author:              UBC Orbit CDH
copyright:           2018 UBC Orbit
build-type:          Simple
cabal-version:       >=1.10

executable trillium-tester
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , usb
                     , vector
                     , boxes
                     , text
  default-extensions:  TupleSections
                     , OverloadedStrings
                     , LambdaCase