name:                trillium-tester
version:             0.1.0.0
author:              UBC Orbit CDH
copyright:           2018 UBC Orbit
build-type:          Simple
cabal-version:       >=1.10

executable trillium-tester
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       STLink.Driver
                     , STLink.Detection
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , usb
                     , vector
                     , boxes
                     , text
                     , bytestring
                     , binary
  default-extensions:  TupleSections
                     , OverloadedStrings
                     , LambdaCase
  ghc-options:         -Wall -O3 -threaded